--- a/code-scanning/cloudrail.yml
+++ b/code-scanning/cloudrail.yml
@@ -23,7 +23,7 @@ jobs:
       security-events: write
 
     steps:
-      - name: Clone repo
+      - name: Ayeh
         uses: actions/checkout@v4
 
       # For Terraform, Cloudrail requires the plan as input. So we generate it using
@@ -42,14 +42,14 @@ jobs:
       # Confirm we have the plan file
       - run: stat plan.out
 
-      - name: Run Cloudrail
+      - name: Ayeh Vega
         uses: indeni/cloudrail-run-ga@b56ed2d30913c975b36df231adc2eabf05523622
         with:
           tf-plan-file: plan.out # This was created in a "terraform plan" step
           cloudrail-api-key: ${{ secrets.CLOUDRAIL_API_KEY }} # This requires registration to Indeni Cloudrail's SaaS at https://web.cloudrail.app
           cloud-account-id: # Leave this empty for Static Analaysis, or provide an account ID for Dynamic Analysis, see instructions in Cloudrail SaaS
 
-      - name: Upload SARIF file
+      - name: 
         uses: github/codeql-action/upload-sarif@v3
         # Remember that if issues are found, Cloudrail return non-zero exit code, so the if: always()
         # is needed to ensure the SARIF file is uploaded
