--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,3 +3,14 @@
 /code-scanning/ @actions/advanced-security-code-scanning @actions/actions-workflow-development-reviewers @actions/advanced-security-dependency-graph @actions/starter-workflows
 /code-scanning/dependency-review.yml @actions/actions-workflow-development-reviewers @actions/advanced-security-dependency-graph @actions/starter-workflows
 /pages/ @actions/pages @actions/actions-workflow-development-reviewers @actions/starter-workflows
+.github/CODEOWNERS# Default owners for all files
+* @actions/actions-workflow-development-reviewers @actions/starter-workflows
+
+# Code scanning workflows
+/code-scanning/ @actions/advanced-security-code-scanning @actions/actions-workflow-development-reviewers @actions/advanced-security-dependency-graph @actions/starter-workflows
+
+# Specific workflow inside code-scanning
+/code-scanning/dependency-review.yml @actions/actions-workflow-development-reviewers @actions/advanced-security-dependency-graph @actions/starter-workflows
+
+# Pages workflows
+/pages/ @actions/pages @actions/actions-workflow-development-reviewers @actions/starter-workflows
