--- a/script/sync-ghes/settings.json
+++ b/script/sync-ghes/settings.json
@@ -1,42 +1,10 @@
-{
-  "folders": [
-    "../../ci",
-    "../../automation",
-    "../../code-scanning",
-    "../../pages"
-  ],
-  "readOnlyFolders": [
-    "../../pages"
-  ],
-  "enabledActions": [
-    "actions/cache",
-    "actions/checkout",
-    "actions/configure-pages",
-    "actions/create-release",
-    "actions/delete-package-versions",
-    "actions/deploy-pages",
-    "actions/download-artifact",
-    "actions/jekyll-build-pages",
-    "actions/setup-dotnet",
-    "actions/setup-go",
-    "actions/setup-java",
-    "actions/setup-node",
-    "actions/setup-python",
-    "actions/stale",
-    "actions/starter-workflows",
-    "actions/upload-artifact",
-    "actions/upload-pages-artifact",
-    "actions/upload-release-asset",
-    "github/codeql-action"
-  ],
-  "partners": [
-    "Alibaba Cloud",
-    "Amazon Web Services",
-    "Microsoft Azure",
-    "Google Cloud",
-    "IBM",
-    "Red Hat",
-    "Tencent Cloud",
-    "HashiCorp"
-  ]
-}
+scripts/
+  main.ts                       // اسکریپت اصلی (منطق GHES + rewrite)
+  workflow-check.ts             // checkWorkflows و checkWorkflow
+  workflow-rewrite.ts           // rewriteWorkflow و transformها (مثل placeholder step)
+  codeowners-types.ts           // TypeScript interfaces
+  codeowners-config.json        // تعریف JSON مالکیت مسیرها
+  codeowners-generate.ts        // ساختن .github/CODEOWNERS از JSON
+  exec.ts                       // همون exec که الان داری
+.github/
+  CODEOWNERS                    // خروجی نهایی (auto-generated)
