--- a/script/sync-ghes/tsconfig.json
+++ b/script/sync-ghes/tsconfig.json
@@ -1,5 +1,36 @@
 {
-  "compilerOptions": {
-  },
-  "include": ["*.ts"]
+  "owners": [
+    {
+      "pattern": "*",
+      "teams": [
+        "@actions/actions-workflow-development-reviewers",
+        "@actions/starter-workflows"
+      ]
+    },
+    {
+      "pattern": "/code-scanning/",
+      "teams": [
+        "@actions/advanced-security-code-scanning",
+        "@actions/actions-workflow-development-reviewers",
+        "@actions/advanced-security-dependency-graph",
+        "@actions/starter-workflows"
+      ]
+    },
+    {
+      "pattern": "/code-scanning/dependency-review.yml",
+      "teams": [
+        "@actions/actions-workflow-development-reviewers",
+        "@actions/advanced-security-dependency-graph",
+        "@actions/starter-workflows"
+      ]
+    },
+    {
+      "pattern": "/pages/",
+      "teams": [
+        "@actions/pages",
+        "@actions/actions-workflow-development-reviewers",
+        "@actions/starter-workflows"
+      ]
+    }
+  ]
 }
