--- a/script/sync-ghes/settings.json
+++ b/script/sync-ghes/settings.json
@@ -19,3 +19,10 @@ export async function rewriteWorkflow(
 
   await fs.writeFile(path, yaml, "utf8");
 }
+let workflow;
+try {
+  workflow = safeLoad(content);
+} catch (err) {
+  console.error(`Invalid YAML in ${path}`, err);
+  return;
+}
